--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap");
+
+
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+
+
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   padding: 0;
@@ -13,4 +32,16 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+.league {
+  font-family: "League Spartan", sans-serif;
+}
+.type{
+  font-family: 'Special Elite', system-ui;
+}
+
+.pop{
+  font-family: 'Poppins', sans-serif;
 }
